SONARIAC-1224 Bicep files should be belonging to AzureResourceManager for SonarCloud AutoScan (#1012)