@@ -26,7 +26,7 @@ import org.sonar.api.resources.AbstractLanguage;
 public class TerraformLanguage extends AbstractLanguage {
 
   public static final String KEY = "terraform";
-  static final String NAME = "Terraform";
+  public static final String NAME = "Terraform";
 
   private final Configuration configuration;
 
@@ -38,7 +38,10 @@ public class TerraformLanguage extends AbstractLanguage {
   @Override
   public String[] getFileSuffixes() {
     String[] suffixes = Arrays.stream(configuration.getStringArray(TerraformSettings.FILE_SUFFIXES_KEY))
-      .filter(s -> !s.trim().isEmpty()).toArray(String[]::new);
-    return suffixes.length > 0 ? suffixes : TerraformSettings.FILE_SUFFIXES_DEFAULT_VALUE.split(",");
+      .filter(s -> !s.isBlank()).toArray(String[]::new);
+    if (suffixes.length > 0) {
+      return suffixes;
+    }
+    return TerraformSettings.FILE_SUFFIXES_DEFAULT_VALUE.split(",");
   }
 }
